--- a/Notebooks/Chapter_2.ipynb
+++ b/Notebooks/Chapter_2.ipynb
@@ -570,9 +570,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (datascience)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datascience"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
