WIP: working on ch4.2.1

--- a/Notebooks/Chapter_4.ipynb
+++ b/Notebooks/Chapter_4.ipynb
@@ -411,8 +411,15 @@
    "metadata": {},
    "source": [
     "#### 모델에 대한 Coefficient 읽기\n",
-    "* SqFtTotLiving: 의 경우 1제곱피트르 증가되면, 예상가격은 229달러 증가할 것이다."
+    "* SqFtTotLiving: 2.288321e+02 --> 1제곱피트가 증가되면, 예상가격은 229달러 증가할 것이다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
