--- a/Notebooks/Chapter_4.ipynb
+++ b/Notebooks/Chapter_4.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# 회귀와 예측\n",
     "\n",
@@ -2409,6 +2413,13 @@
     "\n",
     "* ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
