--- a/Notebooks/Chapter_6.ipynb
+++ b/Notebooks/Chapter_6.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "5  paid off            1.89923  11.34"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,13 +105,13 @@
    "source": [
     "# 6.1.1 simple KNN on payment_inc_ratio and dti\n",
     "\n",
-    "lending_data = pd.read_csv('../data/loan200.csv')\n",
-    "lending_data.head(6)"
+    "loan_data_1_1 = pd.read_csv('../data/loan200.csv')\n",
+    "loan_data_1_1.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "'paid off'"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,23 +130,257 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "# training on KNN from sklearn\n",
-    "knn = NearestNeighbors(n_neighbors=20, algorithm='ball_tree')\n",
+    "knn_1_1 = NearestNeighbors(n_neighbors=20, algorithm='ball_tree')\n",
     "\n",
     "# test <- first data\n",
-    "test = lending_data.iloc[0, 1:3]\n",
+    "test = loan_data_1_1.iloc[0, 1:3]\n",
     "test = np.array(test).reshape(1,2)\n",
     "\n",
     "# x_train <- payment_inc_ratio and dti\n",
     "# y_train <- outcome\n",
-    "x_train = lending_data.iloc[1:,1:3]\n",
-    "y_train = lending_data.iloc[1:,0]\n",
+    "x_train = loan_data_1_1.iloc[1:,1:3]\n",
+    "y_train = loan_data_1_1.iloc[1:,0]\n",
     "\n",
     "# fitting with x and y\n",
-    "knn.fit(x_train, y_train)\n",
+    "knn_1_1.fit(x_train, y_train)\n",
     "\n",
     "# querying nearest neighbors of 'test' and get the nearest neighbor's outcome\n",
-    "result = knn.kneighbors(test, return_distance=False)\n",
-    "lending_data.iloc[result[0,0]][0]"
+    "result_1_1 = knn_1_1.kneighbors(test, return_distance=False)\n",
+    "loan_data_1_1.iloc[result_1_1[0,0]][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>payment_inc_ratio</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>revol_bal</th>\n",
+       "      <th>revol_util</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>default</td>\n",
+       "      <td>2.39320</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1687</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>default</td>\n",
+       "      <td>4.57170</td>\n",
+       "      <td>5.55</td>\n",
+       "      <td>5210</td>\n",
+       "      <td>32.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>default</td>\n",
+       "      <td>9.71600</td>\n",
+       "      <td>18.08</td>\n",
+       "      <td>9279</td>\n",
+       "      <td>36.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>default</td>\n",
+       "      <td>12.21520</td>\n",
+       "      <td>10.08</td>\n",
+       "      <td>10452</td>\n",
+       "      <td>91.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>default</td>\n",
+       "      <td>3.90888</td>\n",
+       "      <td>7.06</td>\n",
+       "      <td>11997</td>\n",
+       "      <td>55.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>default</td>\n",
+       "      <td>8.01977</td>\n",
+       "      <td>13.22</td>\n",
+       "      <td>32135</td>\n",
+       "      <td>90.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   outcome  payment_inc_ratio    dti  revol_bal  revol_util\n",
+       "0  default            2.39320   1.00       1687         9.4\n",
+       "1  default            4.57170   5.55       5210        32.6\n",
+       "2  default            9.71600  18.08       9279        36.5\n",
+       "3  default           12.21520  10.08      10452        91.7\n",
+       "4  default            3.90888   7.06      11997        55.5\n",
+       "5  default            8.01977  13.22      32135        90.3"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6.1.4 Standardization, Regularization and Z score\n",
+    "\n",
+    "loan_data_1_4 = pd.read_csv('../data/loan_data.csv')\n",
+    "features_1_4 = ['outcome','payment_inc_ratio', 'dti', 'revol_bal', 'revol_util']\n",
+    "loan_data_1_4 = loan_data_1_4[features_1_4]\n",
+    "loan_data_1_4.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.3932 1.0 1687 9.4]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>payment_inc_ratio</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>revol_bal</th>\n",
+       "      <th>revol_util</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35535</th>\n",
+       "      <td>paid off</td>\n",
+       "      <td>8.30143</td>\n",
+       "      <td>11.38</td>\n",
+       "      <td>10074</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33650</th>\n",
+       "      <td>paid off</td>\n",
+       "      <td>7.04082</td>\n",
+       "      <td>21.81</td>\n",
+       "      <td>25639</td>\n",
+       "      <td>76.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25862</th>\n",
+       "      <td>paid off</td>\n",
+       "      <td>4.14828</td>\n",
+       "      <td>12.96</td>\n",
+       "      <td>7302</td>\n",
+       "      <td>88.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42952</th>\n",
+       "      <td>paid off</td>\n",
+       "      <td>9.14223</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>7918</td>\n",
+       "      <td>19.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43598</th>\n",
+       "      <td>paid off</td>\n",
+       "      <td>2.50637</td>\n",
+       "      <td>7.65</td>\n",
+       "      <td>43305</td>\n",
+       "      <td>48.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        outcome  payment_inc_ratio    dti  revol_bal  revol_util\n",
+       "35535  paid off            8.30143  11.38      10074        69.5\n",
+       "33650  paid off            7.04082  21.81      25639        76.1\n",
+       "25862  paid off            4.14828  12.96       7302        88.0\n",
+       "42952  paid off            9.14223   1.23       7918        19.8\n",
+       "43598  paid off            2.50637   7.65      43305        48.7"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6.1.4 (cont')\n",
+    "\n",
+    "# training on KNN from sklearn\n",
+    "knn_1_4 = NearestNeighbors(n_neighbors=5, algorithm='auto')\n",
+    "\n",
+    "# test <- first data\n",
+    "test = loan_data_1_4.iloc[0,1:]\n",
+    "test = np.array(test).reshape(1,4)\n",
+    "\n",
+    "print(test)\n",
+    "\n",
+    "# x_train <- payment_inc_ratio and dti\n",
+    "# y_train <- outcome\n",
+    "x_train = loan_data_1_4.iloc[1:,1:]\n",
+    "y_train = loan_data_1_4.iloc[1:,0]\n",
+    "\n",
+    "# fitting with x and y\n",
+    "knn_1_4.fit(x_train, y_train)\n",
+    "\n",
+    "# querying nearest neighbors of 'test' and get the nearest neighbor's outcome\n",
+    "result_1_4 = knn_1_4.kneighbors(test, return_distance=False)\n",
+    "loan_data_1_4.iloc[result_1_4[0]]"
    ]
   },
   {
