done chapter 6 coding

--- a/Notebooks/Chapter_6_Ko.ipynb
+++ b/Notebooks/Chapter_6_Ko.ipynb
@@ -3088,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -3108,21 +3108,48 @@
       "\ttrain index : 0 \ttest index: 27206\n",
       "\ttrain index : 0 \ttest index: 36274\n",
       "training with 0.90 learning rate and 3 max_depth\n",
-      "\ttrain index : 9069 \ttest index: 0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-192-07544a288835>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mwatchlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtest_4_4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'eval'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdtrain_4_4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mmodel_4_4_xgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtrain_4_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_boost_round\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose_eval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0mpred_4_4_xgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_4_4_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtest_4_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mntree_limit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mpred_4_4_xgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpred_4_4_xgb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/py36/lib/python3.6/site-packages/xgboost/training.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(params, dtrain, num_boost_round, evals, obj, feval, maximize, early_stopping_rounds, evals_result, verbose_eval, xgb_model, callbacks, learning_rates)\u001b[0m\n\u001b[1;32m    214\u001b[0m                            \u001b[0mevals\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m                            \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeval\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 216\u001b[0;31m                            xgb_model=xgb_model, callbacks=callbacks)\n\u001b[0m\u001b[1;32m    217\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/py36/lib/python3.6/site-packages/xgboost/training.py\u001b[0m in \u001b[0;36m_train_internal\u001b[0;34m(params, dtrain, num_boost_round, evals, obj, feval, xgb_model, callbacks)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0;31m# Skip the first update if it is a recovery step.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m             \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m             \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_rabit_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0mversion\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/py36/lib/python3.6/site-packages/xgboost/core.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, dtrain, iteration, fobj)\u001b[0m\n\u001b[1;32m   1043\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1044\u001b[0m             _check_call(_LIB.XGBoosterUpdateOneIter(self.handle, ctypes.c_int(iteration),\n\u001b[0;32m-> 1045\u001b[0;31m                                                     dtrain.handle))\n\u001b[0m\u001b[1;32m   1046\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1047\u001b[0m             \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.10 learning rate and 6 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.50 learning rate and 6 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.90 learning rate and 6 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.10 learning rate and 12 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.50 learning rate and 12 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "training with 0.90 learning rate and 12 max_depth\n",
+      "\ttrain index : 9069 \ttest index: 0\n",
+      "\ttrain index : 0 \ttest index: 9069\n",
+      "\ttrain index : 0 \ttest index: 18138\n",
+      "\ttrain index : 0 \ttest index: 27206\n",
+      "\ttrain index : 0 \ttest index: 36274\n",
+      "time spent: 3533 s\n"
      ]
     }
    ],
@@ -3160,9 +3187,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eta</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>avg_error</th>\n",
+       "      <th>avg_error_xgb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>53.424719</td>\n",
+       "      <td>53.863571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>53.863556</td>\n",
+       "      <td>54.264911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>54.137010</td>\n",
+       "      <td>54.342112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>53.400456</td>\n",
+       "      <td>54.064254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>54.062050</td>\n",
+       "      <td>54.445778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>54.372989</td>\n",
+       "      <td>54.445781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>53.667306</td>\n",
+       "      <td>54.320089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>54.344333</td>\n",
+       "      <td>54.743539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>54.425936</td>\n",
+       "      <td>54.701645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   eta  max_depth  avg_error  avg_error_xgb\n",
+       "0  0.1          3  53.424719      53.863571\n",
+       "1  0.5          3  53.863556      54.264911\n",
+       "2  0.9          3  54.137010      54.342112\n",
+       "3  0.1          6  53.400456      54.064254\n",
+       "4  0.5          6  54.062050      54.445778\n",
+       "5  0.9          6  54.372989      54.445781\n",
+       "6  0.1         12  53.667306      54.320089\n",
+       "7  0.5         12  54.344333      54.743539\n",
+       "8  0.9         12  54.425936      54.701645"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_xgb = np.array(errors_xgb)\n",
     "errors_xgb = errors_xgb.reshape(9,5)\n",
